# quattro_research

./: API_tasks.py  API_tasks_2.py  Fetch_websites.py  ID_Mapping.py  Protein.py  README.md  UniProt_IDs.txt  Utils.py  output.csv  protein_API_Tasks.ipynb  protein_API_Tasks_2.ipynb  protein_gene_analysis.xlsx  pyproject.toml
poetry-API_Tasks/: pyproject.toml
virtuelenv/: pyvenv.cfg
virtuelenv/Scripts/: activate  activate.bat
