[project]
name = "poetry-api-tasks"
version = "0.1.0"
description = ""
authors = [
    {name = "SevenSamurai123",email = "c.kloppert@gmx.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "poetry_api_tasks", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
